--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 *.userosscache
 *.sln.docstates
 *.env
+.next/
+/.next
+node_modules/
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -33,6 +36,10 @@ bld/
 [Oo]ut/
 [Ll]og/
 [Ll]ogs/
+
+.next/
+/.next
+node_modules/
 
 # Build results on 'Bin' directories
 **/[Bb]in/*
