--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    
-    "build": "next build",
-    "start": "next start -p $PORT",
+  "build": "next build",
+  "start": "next start -p $PORT"
+},
+"engines": {
+  "node": "18.x"
   
   },
   "dependencies": {
     "lucide-react": "^0.378.0",
-    "next": "14.2.3",
+    "next": "14.2.35",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
@@ -31,6 +33,7 @@
     "typescript": "^5"
   }
 }
+
 
 
 
