--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-  "build": "next build",
-  "start": "next start -p $PORT"
-},
-"engines": {
-  "node": "18.x"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   
   },
   "dependencies": {
@@ -33,6 +32,7 @@
     "typescript": "^5"
   }
 }
+
 
 
 
